# lotuslab

./: .gitignore  README.md  biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
.zed/: settings.json
notes/: app_design.md  component_design.md  data_structure_planning.md  planning.md  styles.md
notes/pages/: list.md
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  001_schema.sql
src-tauri/src/: lib.rs
src/components/: app_header.tsx  icons.tsx  import-list.tsx  import_list.tsx
src/components/ui/: button.tsx  dialog.tsx  table.tsx  text-field.tsx
src/lib/: db.ts  db_import_cards.ts  db_types.ts  file_operations.ts  import_cards.ts  project.ts
src/lib/db/: download_mtgjson.ts  download_scryfall.ts  lotuslab_card_builder.ts
src/pages/: 404.tsx  card_page.tsx  home_page.tsx  list_page.tsx  list_page_old.tsx  project_page.tsx  search_page.tsx  settings_page.tsx  testing_page.tsx  theme_preview_page.tsx
src/styles/: animations.css  colors.css  index.css  spacing.css
src/tests/: test_card_list.ts
src/utils/: card_list.ts  file_operations.ts
test-files/: br-darcy.txt
