[package]
name = "moxcel"
version = "0.0.0"
description = "A local-first mtg list editor"
authors = ["jesseb34r"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.4", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
scryfall = "0.18.0"
